implement changes to set a central executor for htcondor

--- a/tests/darwin.ini
+++ b/tests/darwin.ini
@@ -1,8 +1,18 @@
+# Darwin Submit file example
+#   
+#   This file represents the way any user will submit any given file to the darwin 
+#   application. The executables should inform the absolute path of all files
+#
+#
+#
+
+
+[darwin]
+Executable=/bin/sleep
 
 [htcondor]
 
 Collector=lsc.ic.unicamp.br
-Executable=/bin/sleep
 Universe=vanilla
 Error=logs/err.$(cluster)
 Output=logs/out.$(cluster)
