organized pytest framework + new setup.cfg

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,12 +1,12 @@
 
 DARWINDIR=darwin.opt
 EXECDIR=darwin.exec
-CC = gcc -lm 
+CC = gcc
 
 all: sanity
 
 sanity: sanity.c
-	$(CC) $^ -o darwin.opt/sanity 
+	$(CC) $^ -o $(DARWINDIR)/sanity -lm
 
 clean: sanity
 	rm -f $(DARWINDIR)/sanity darwin.log output.txt
