add auto submit file and a testcase to validate it use

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -7,6 +7,7 @@ all: sanity
 
 sanity: sanity.c
 	$(CC) $^ -o $(DARWINDIR)/sanity -lm
+	$(CC) $^ -o $(DARWINDIR)/autoexecutor -lm
 
 clean: sanity
 	rm -f $(DARWINDIR)/sanity darwin.log output.txt
